--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>El titulo del post</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
+
 <body>
-    <h1>Aqui vamos a hacer un blog</h1>
-    <p>y este es el parrafo inicial</p>
+    <div id="container"> 
+        <div id="post">
+            <h1>Aqui vamos a hacer un blog</h1>
+            <p>y este es el parrafo inicial</p>
+        </div>
+    </div>
+
 </body>
 
 </html>
