--- a/blogpost.html
+++ b/blogpost.html
@@ -8,6 +8,9 @@
 
 <body>
     <div id="container"> 
+        <div class="cabecera">
+            cabecera
+        </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog</h1>
             <p>y este es el parrafo inicial</p>
