--- a/blogpost.html
+++ b/blogpost.html
@@ -8,8 +8,8 @@
 
 <body>
     <div id="container"> 
-        <div class="cabecera">
-            cabecera
+        <div id="cabecera">
+            Hyperblog <span id="tagline">Tu Blog de confianza</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog</h1>
