color de fondo, logo nuevo y mejor color de header

--- a/blogpost.html
+++ b/blogpost.html
@@ -9,7 +9,9 @@
 <body>
     <div id="container"> 
         <div id="cabecera">
-            Hyperblog <span id="tagline">Tu Blog de confianza</span>
+            <img id="logo" src="imagenes/dragon.png">
+            Hyperblog 
+            <span id="tagline">Tu Blog de confianza</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog</h1>
