--- a/blogpost.html
+++ b/blogpost.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <meta charset="UTF-8">
     <title>Bienvenido a Hyperblog 2.0</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
