--- a/blogpost.html
+++ b/blogpost.html
@@ -7,20 +7,20 @@
 </head>
 
 <body>
-    <div id="container"> 
+    <div id="container">
         <div id="cabecera">
             Hyperblog <span id="tagline">Tu Blog de confianza</span>
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog</h1>
             <p>y este es el parrafo inicial</p>
-            <p>este es otro parrafo que se agrego 
-                cuando volvimos a la rama main para 
+            <p>este es otro parrafo que se agrego
+                cuando volvimos a la rama main para
                 evidenciar los cambios entre ramas
             </p>
         </div>
+        <div id="footer">Hecho con amor en platzi 💚</div>
     </div>
-
 </body>
 
 </html>
