se agrega un nuevo parrafo en el home

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,9 @@
                 cuando volvimos a la rama main para
                 evidenciar los cambios entre ramas
             </p>
+            <p>estas son buenas practicas de desarrollo que nos ayudan a manejar
+                mejor todo el tema de ramas con pull request
+            </p>
         </div>
         <div id="footer">Hecho con amor en platzi 💚</div>
     </div>
