cambios de tildes con entidades html

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,7 +16,7 @@
         </div>
         <div id="post">
             <h1>Aqui vamos a hacer un blog</h1>
-            <p>y este es el parrafo inicial</p>
+            <p>y este es el p&aacute;rrafo inicial</p>
             <p>este es otro parrafo que se agrego
                 cuando volvimos a la rama main para
                 evidenciar los cambios entre ramas
